# mygpt

./: CANDLE_MIGRATION_SUMMARY.md  COMPARISON.md  Cargo.toml  QUICKSTART.md  README_CANDLE.md  build_candle.sh
artifact_candle/: config.json
src_candle/: main.rs
src_candle/batching/: mod.rs
src_candle/dataset/: mod.rs
src_candle/generating/: mod.rs
src_candle/modeling/: mod.rs
src_candle/tokenizing/: mod.rs
src_candle/training/: mod.rs
