[package]
name = "mygpt-candle"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"

[[bin]]
name = "mygpt-candle"
path = "src_candle/main.rs"
